@@ -87,10 +87,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                    </argLine>
                   <suiteXmlFiles>
                     <suiteXmlFile>${maven-surefire-plugin.suiteXmlFile}</suiteXmlFile>
                   </suiteXmlFiles>
